[gd_scene load_steps=4 format=3 uid="uid://6r5q2tiyqs15"]

[ext_resource type="Script" uid="uid://cppgsabsb3gbu" path="res://scripts/reusable_ components/info_icon.gd" id="1_wvwua"]
[ext_resource type="Texture2D" uid="uid://cakdhlq3hi11f" path="res://assets/info_icon.png" id="2_upr50"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wvwua"]

[node name="info_icon" type="Panel"]
custom_minimum_size = Vector2(20, 20)
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_wvwua")
script = ExtResource("1_wvwua")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_upr50")

[connection signal="mouse_entered" from="MarginContainer" to="." method="_on_margin_container_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer" to="." method="_on_margin_container_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/TextureRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/TextureRect" to="." method="_on_mouse_exited"]
